--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,34 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Awesome counter
-  </h1>
- <app-counter> </app-counter>
+<div class="main-content">
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"routerLink="/counter">Counter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/languages">Languages</a>
+            </li>
+           
+          </ul>
+      
+      </nav>
+    
+      <div class="container mt-1">
+          <router-outlet> </router-outlet>
+
+      </div>
+
+    
+
+
+
+
+  
+
 </div>
 
 
