--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,14 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/languages">Languages</a>
             </li>
-           
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/addlanguage">Add a Languages</a>
+            </li>
           </ul>
       
       </nav>
     
-      <div class="container mt-1">
+      <div class="container mt-2">
           <router-outlet> </router-outlet>
 
       </div>
