--- a/src/app/components/language/language.component.html
+++ b/src/app/components/language/language.component.html
@@ -8,6 +8,6 @@
         <strong>Created by: </strong> <span>{{language.creator}}</span>
    </p>
    <p class="col-2">
-        <strong>Year: </strong> <span>{{language.year}}</span>
+        <strong>Year: </strong> <span>{{language.year | yearRange}}</span>
    </p>
 </div>
